--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -208,6 +208,9 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Subscription"
+              examples:
+                subscription-active:
+                  $ref: "#/components/examples/SUBSCRIPTION_ACTIVE"
         "202":
           description: Request accepted to be processed. It applies for async creation process.
           headers:
@@ -441,7 +444,7 @@ components:
         subscriptionExpireTime:
           type: string
           format: date-time
-          example: 2023-01-17T13:18:23.682Z
+          example: "2023-01-17T13:18:23.682Z"
           description: The subscription expiration time (in date-time format) requested by the API consumer.
         subscriptionMaxEvents:
           type: integer
@@ -1288,7 +1291,7 @@ components:
           device:
             phoneNumber: +123456787
           subscriptionId: qs15-h556-rt89-1298
-        time: 2023-01-19T13:18:23.682Z
+        time: "2023-01-19T13:18:23.682Z"
 
     REACHABILITY_SMS:
       value:
@@ -1301,7 +1304,7 @@ components:
           device:
             phoneNumber: +123456787
           subscriptionId: qs15-h556-rt89-1298
-        time: 2023-01-19T13:18:23.682Z
+        time: "2023-01-19T13:18:23.682Z"
 
     REACHABILITY_DISCONNECTED:
       value:
@@ -1314,7 +1317,7 @@ components:
           device:
             phoneNumber: +123456787
           subscriptionId: qs15-h556-rt89-1298
-        time: 2023-01-19T13:18:23.682Z
+        time: "2023-01-19T13:18:23.682Z"
 
     SUBSCRIPTION_ENDS:
       value:
@@ -1328,7 +1331,7 @@ components:
             phoneNumber: +123456789
           terminationReason: SUBSCRIPTION_EXPIRED
           subscriptionId: qs15-h556-rt89-1298
-        time: 2024-03-22T05:40:23.682Z
+        time: "2024-03-22T05:40:23.682Z"
 
     SUBSCRIPTION_ACTIVE:
       value:
@@ -1341,11 +1344,11 @@ components:
           subscriptionDetail:
             device:
               phoneNumber: "+123456789"
-          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionExpireTime: "2024-07-17T13:18:23.682Z"
           subscriptionMaxEvents: 5
           initialEvent: true
-        startsAt: 2024-07-03T21:12:02.871Z
-        expiresAt: 2024-07-03T21:12:02.871Z
+        startsAt: "2024-07-03T21:12:02.871Z"
+        expiresAt: "2024-07-03T21:12:02.871Z"
         status: ACTIVE
 
     SUBSCRIPTION_ACTIVATION_REQUESTED:
@@ -1359,11 +1362,11 @@ components:
           subscriptionDetail:
             device:
               phoneNumber: "+123456789"
-          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionExpireTime: "2024-07-17T13:18:23.682Z"
           subscriptionMaxEvents: 5
           initialEvent: true
-        startsAt: 2024-07-03T21:12:02.871Z
-        expiresAt: 2024-07-03T21:12:02.871Z
+        startsAt: "2024-07-03T21:12:02.871Z"
+        expiresAt: "2024-07-03T21:12:02.871Z"
         status: ACTIVATION_REQUESTED
 
     SUBSCRIPTION_DELETED:
@@ -1377,9 +1380,9 @@ components:
           subscriptionDetail:
             device:
               phoneNumber: "+123456789"
-          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionExpireTime: "2024-07-17T13:18:23.682Z"
           subscriptionMaxEvents: 5
           initialEvent: true
-        startsAt: 2024-07-03T21:12:02.871Z
-        expiresAt: 2024-07-03T21:12:02.871Z
+        startsAt: "2024-07-03T21:12:02.871Z"
+        expiresAt: "2024-07-03T21:12:02.871Z"
         status: DELETED
