--- a/code/API_definitions/device-roaming-status-subscriptions.yaml
+++ b/code/API_definitions/device-roaming-status-subscriptions.yaml
@@ -795,9 +795,8 @@ components:
 
     SubscriptionId:
       type: string
-      format: uuid
-      description: Identifier of the event subscription - This attribute must not be present in the POST request as it is provided by API server
-      example: 550e8400-e29b-41d4-a716-446655440000
+      description: The unique identifier of the subscription in the scope of the subscription manager. When this information is contained within an event notification, this concept SHALL be referred as `subscriptionId` as per [Commonalities Event Notification Model](https://github.com/camaraproject/Commonalities/blob/main/documentation/API-design-guidelines.md#122-event-notification).
+      example: qs15-h556-rt89-1298
 
     CloudEvent:
       description: The notification callback
