--- a/code/API_definitions/connected-network-type-subscriptions.yaml
+++ b/code/API_definitions/connected-network-type-subscriptions.yaml
@@ -1459,6 +1459,7 @@ components:
           "accessTokenExpiresUtc": "2024-02-17T16:23:45Z",
           "accessTokenType": "bearer"
         }
+        protocol: HTTP
         types: [
           "org.camaraproject.connected-network-type-subscriptions.v0.network-type-changed"
         ]
