--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -1570,6 +1570,7 @@ components:
           "accessTokenExpiresUtc": "2024-02-17T16:23:45Z",
           "accessTokenType": "bearer"
         }
+        protocol: HTTP
         types: [
           "org.camaraproject.connected-network-type-subscriptions.v0.reachability-data"
         ]
